--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
         <activity
+            android:name=".Liatproses2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Suratproses2Activity"
+            android:exported="false" />
+        <activity
             android:name=".Home2Activity"
             android:exported="false" />
         <activity
@@ -20,19 +26,17 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
