--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+        <activity android:name=".FeedbackActivity" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true"
