--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".SuratlulusActivity"
             android:exported="false" />
         <activity
+            android:name=".SurataktifActivity"
+            android:exported="false" />
+        <activity
             android:name=".Liatproses2Activity"
             android:exported="false" />
         <activity
