--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
         <activity
+            android:name=".FormuliraktifActivity"
+            android:exported="false" />
+        <activity
             android:name=".SuratlulusActivity"
             android:exported="false" />
         <activity
@@ -34,7 +37,6 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity android:name=".FeedbackActivity" />
-
         <activity
             android:name=".SplashActivity"
             android:exported="true"
