--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,6 @@
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
         <activity
-            android:name=".FormuliraktifActivity"
-            android:exported="false" />
-        <activity
             android:name=".SuratlulusActivity"
             android:exported="false" />
         <activity
@@ -25,10 +22,28 @@
             android:name=".Liatproses2Activity"
             android:exported="false" />
         <activity
+            android:name=".SuratSelesaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SuratDitolakActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TranskripNilaiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RincianditolakActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NotifikasiActivity"
+            android:exported="false" />
+        <activity
             android:name=".Suratproses2Activity"
             android:exported="false" />
         <activity
             android:name=".Home2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".FormuliraktifActivity"
             android:exported="false" />
         <activity
             android:name=".Login2Activity"
@@ -37,6 +52,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity android:name=".FeedbackActivity" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="true"
