--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
         <activity
+            android:name=".Formuliraktif2Activity"
+            android:exported="false" />
+        <activity
             android:name=".FormuliraktifActivity"
             android:exported="false" />
         <activity
