--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
         <activity
+            android:name=".Transkipnilai3Activity"
+            android:exported="false" />
+        <activity
             android:name=".Formuliraktif3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Transkipnilai2Activity"
             android:exported="false" />
         <activity
             android:name=".FormuliraktifActivity"
