--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,12 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version = "2.9.0" }
+retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version = "2.9.0" }
+retrofit-scalars = { module = "com.squareup.retrofit2:converter-scalars", version = "2.9.0" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version = "4.9.0" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version = "4.9.0" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
