--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pemrograman_bergerak"
         tools:targetApi="31">
+        <activity
+            android:name=".TranskripdoneMain2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Formlulus3Main2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Formlulus2Main2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Formlulus1Main2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Feedback2Main2Activity"
+            android:exported="false" />
         <activity
             android:name=".Transkipnilai3Activity"
             android:exported="false" />
